--- a/Components/App.razor
+++ b/Components/App.razor
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="Ticktes.razor.css"/>
     <link rel="stylesheet" href="BlazorApp2.styles.css" />
+    <link rel="stylesheet" href="AdminSignUpApproval.razor.css"/>
+    <link rel="stylesheet" href="CustomerSignUp.razor.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
 
     <HeadOutlet />
