--- a/Components/Pages/ConfirmationPage.razor
+++ b/Components/Pages/ConfirmationPage.razor
@@ -5,7 +5,7 @@
 <h3>Sign Up Successful</h3>
 <p>Thank you for signing up! Your request has been submitted and is awaiting approval by the administrator. You will receive a notification once your sign-up is processed.</p>
 
-<button @onclick="NavigateToSignUpPage">Back to AdminApproval page</button>
+<button @onclick="NavigateToSignUpPage">Go to AdminApproval page</button>
 
 @code {
     // Method to navigate back to the customer sign-up page
