--- a/Components/Pages/AdminSignUpApproval.razor
+++ b/Components/Pages/AdminSignUpApproval.razor
@@ -38,8 +38,8 @@
 }
 
 @code {
-    private List<PendingSignUp> pendingSignUps;
-    private string errorMessage;
+    private List<PendingSignUp>? pendingSignUps;
+    private string? errorMessage;
 
     protected override async Task OnInitializedAsync()
     {
