--- a/Components/Pages/CustomerSignUp.razor
+++ b/Components/Pages/CustomerSignUp.razor
@@ -35,7 +35,7 @@
 
 @code {
     private CustomerSignUpModel customerSignUpModel = new CustomerSignUpModel();
-    private string errorMessage;
+    private string? errorMessage;
 
     private async Task SubmitSignUp()
     {
