--- a/Components/Pages/ViewTicket.razor
+++ b/Components/Pages/ViewTicket.razor
@@ -78,12 +78,12 @@ else
 @code {
     private List<Ticket> tickets = new List<Ticket>();
     private List<string> agents = new List<string> { "agent1", "agent2", "agent3" };
-    private string errorMessage;
-    private string username;
-    private string password;
+    private string? errorMessage;
+    //private string? username;
+    //private string? password;
 
 
-    protected override async Task OnInitializedAsync()
+    protected override void OnInitialized()
     {
 
         // checks if admin, if not, does not allow to enter the page
