--- a/Components/Pages/AdminSignUpApproval.razor
+++ b/Components/Pages/AdminSignUpApproval.razor
@@ -31,7 +31,7 @@
                         <select @bind="signUp.Role">
                             <option value="customer">customer</option>
                             <option value="agent">agent</option>
-                            <option vaalue="admin">admin</option>
+                            <option value="admin">admin</option>
                         </select>
                     </td>
                     <td>
