--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -34,7 +34,7 @@
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="adminsignup-approval">
-                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>AdminSignUpAprroval
+                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>AdminSignUpApproval
              </NavLink>
         </div>
                 <div class="nav-item px-3">
@@ -60,6 +60,11 @@
                     <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>AgentLogin
                 </NavLink>
             </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="agent-list">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>AgentList
+            </NavLink>
+        </div>
     </nav>
 </div>
 
