--- a/Components/Pages/AgentList.razor
+++ b/Components/Pages/AgentList.razor
@@ -43,7 +43,7 @@ else
 }
 
 @code {
-    private List<User> agents;
+    private List<User>? agents;
 
 
     // No need for a constructor, use lifecycle methods instead
