--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -60,11 +60,11 @@
                     <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>AgentLogin
                 </NavLink>
             </div>
-        <div class="nav-item px-3">
+        @*<div class="nav-item px-3">
             <NavLink class="nav-link" href="agent-list">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>AgentList
             </NavLink>
-        </div>
+        </div>*@
     </nav>
 </div>
 
