--- a/Components/Pages/AdminLogin.razor
+++ b/Components/Pages/AdminLogin.razor
@@ -37,7 +37,7 @@
         {
             // enabling this to access view tickets page
             GlobalVariables.isAdmin = true;
-            NavigationManager.NavigateTo("/view-tickets");
+            NavigationManager.NavigateTo("/admin_dashboard");
         }
         else
         {
