--- a/Components/App.razor
+++ b/Components/App.razor
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="BlazorApp2.styles.css" />
     <link rel="stylesheet" href="AdminSignUpApproval.razor.css"/>
     <link rel="stylesheet" href="CustomerSignUp.razor.css" />
+    <link rel="stylesheet" href="AdminDashboard.razor.css"/>
     <link rel="icon" type="image/png" href="favicon.png" />
 
     <HeadOutlet />
