--- a/Components/Pages/AdminDashboard.razor
+++ b/Components/Pages/AdminDashboard.razor
@@ -9,6 +9,7 @@
 
     <button @onclick="@(() => NavigationManager.NavigateTo("/view-tickets"))">View Tickets</button>
     <button @onclick="@(() => NavigationManager.NavigateTo("/agent-list"))">Agent List</button>
+    <button @onclick="@(()=> NavigationManager.NavigateTo("/adminsignup-approval"))">AdminSignUp Approval</button>
     <button class="btn btn-primary" @onclick="Logout">Logout</button>
 
 @code {
