--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">Ticketing system</a>
+        <a class="navbar-brand" href="">Ticketing System</a>
     </div>
 </div>
 
@@ -32,11 +32,11 @@
                 </NavLink>
             </div>
 
-        <div class="nav-item px-3">
+        @*<div class="nav-item px-3">
             <NavLink class="nav-link" href="adminsignup-approval">
                  <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>AdminSignUpApproval
              </NavLink>
-        </div>
+        </div>*@
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="customer-login">
                         <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>CustomerLogin
