--- a/Components/Pages/AdminSignUpApproval.razor
+++ b/Components/Pages/AdminSignUpApproval.razor
@@ -33,17 +33,26 @@ else
                     <td>@signUp.Name</td>
                     <td>@signUp.Company</td>
                     <td>@signUp.Username</td>
-                    <td> @signUp.Role</td>
-                    <td>
-                        <button @onclick="() => ApproveSignUp(signUp.Id, signUp.Role)">Approve</button>
-                        <button @onclick=" () => RejectSignUp(signUp.Id)">Reject</button>
-                    </td>
+                    <td>@signUp.Role</td>
+                        <td>
+                            @if (signUp.Role != null)
+                            {
+                                <button @onclick="() => ApproveSignUp(signUp.Id, signUp.Role)">Approve</button>
+                            }
+                            else
+                            {
+                                <p>Role is missing</p>
+                            }
+                            <button class="btn btn-danger" @onclick=" () => RejectSignUp(signUp.Id)">Reject</button>
+                        </td>
+
                 </tr>
             }
         </tbody>
     </table>
 }
 }
+    <button class="btn btn-primary" @onclick="@(() => NavigationManager.NavigateTo("/admin_dashboard"))">Admin Dashboard</button>
 @code {
     private List<PendingSignUp>? pendingSignUps;
     private string? errorMessage;
