--- a/Components/Pages/ConfirmationPage.razor
+++ b/Components/Pages/ConfirmationPage.razor
@@ -5,13 +5,13 @@
 <h3>Sign Up Successful</h3>
 <p>Thank you for signing up! Your request has been submitted and is awaiting approval by the administrator. You will receive a notification once your sign-up is processed.</p>
 
-<button @onclick="NavigateToSignUpPage">Go to Admin Login</button>
+<button @onclick="NavigateToSignUpPage">Go to AdminApproval page</button>
 
 @code {
     // Method to navigate back to the customer sign-up page
     private void NavigateToSignUpPage()
     {
-        NavigationManager.NavigateTo("/admin-login", forceLoad: true);
+        NavigationManager.NavigateTo("/adminsignup-approval", forceLoad: true);
     }
 }
 
