--- a/Components/Pages/AgentList.razor
+++ b/Components/Pages/AgentList.razor
@@ -53,6 +53,7 @@ else
     </table>
 }
 }
+<button class="btn btn-primary" @onclick="@(() => NavigationManager.NavigateTo("/admin_dashboard"))">AdminDashboard</button>
 @code {
     private List<User>? agents;
 
