--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 @namespace BlazorApp2
 
-<h1>Hello, world!</h1>
+<h1>Hello, Everyone!</h1>
 
-Welcome to your new app.
+Welcome to our new app.
